--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "sanity": "^3.44.0",
+    "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
